--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+html {
+  min-height: 100%;
+}
+.container {
+  margin-top: 15%;
+  padding: 10px;
+  max-width: 600px;
+  background-color: burlywood;
+  border-radius: 10px;
+}
+.btn {
+  margin: 5px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,9 +19,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#title {
+  font-size: 40px;
+  text-align: center;
+  margin-top: 0px;
+}
+
+.btn {
+  font-size: 10px;
 }
