--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100%;
+  transition: background-color 1s;
 }
 
 code {
@@ -45,4 +46,8 @@ code {
   font-size: 30px;
   margin: 20px;
   font-style: oblique;
+}
+
+#quote-box {
+  transition: height 1s;
 }
